# VectorizedAdjoint

./: README.md
aadc/: CMakeLists.txt
aadc/include/aadc/: aad_lib_pass_end.h  aad_lib_pass_start.h  aadc.h  aadc_compat.h  aadc_debug.h  aadc_drivers.h  aadc_eigen.h  aadc_ext.h  aadc_lapack.h  aadc_matrix.h  aadc_stats.h  aadc_thread_sync.h  aadc_tools.h  aadc_types.h  api.h  ibool.h  icomplex.h  idouble.h  iint.h  visitor_tools.h  vreg.h
aadc/include/aadc/tools/: mmvector.h  osutils.h  osutils.h.my  runtime.h
data/Vanderpol_Section_4_2/Denserks/DENSERKS/: Makefile  README
data/Vanderpol_Section_4_2/Denserks/DENSERKS/examples/: Makefile  cdiff_params.mod  dr_erk_adj_chk_arstf.f90  dr_erk_adj_chk_arstf_M.f90  dr_erk_adj_chk_cdiff.f90  dr_erk_adj_chk_optc.f90  dr_erk_adj_chk_vdp.f90  dr_erk_arstf.f90  dr_erk_soa_chk_optc.f90  dr_erk_soa_chk_vdp.f90  dr_erk_soa_chk_vdp_M.f90  dr_erk_tlm_arstf.f90  dr_erk_tlm_vdp.f90  dr_erk_vdp.f90  lbfgs.f  lbfgs_params.mod  parameters.mod  perturbation.mod
data/Vanderpol_Section_4_2/Denserks/DENSERKS/lib/modules/: rk_module.mod  rkadj_module.mod  rkadjdr_module.mod  rkadjdrm_module.mod  rksoa_module.mod  rksoadr_module.mod  rksoadrm_module.mod  rktlm_module.mod  tapes.mod  tlm_tapes.mod  utils.mod
data/Vanderpol_Section_4_2/Denserks/DENSERKS/src/: Makefile  erk.f90  erk_adj.f90  erk_adjdr.f90  erk_adjdr_M.f90  erk_soa.f90  erk_soadr.f90  erk_soadr_M.f90  erk_tapes.f90  erk_tlm.f90  erk_tlm_tapes.f90  erk_utils.f90
data/Vanderpol_Section_4_2/Denserks/Vanderpol/: Makefile  integrate_module.mod  utility.mod  vanderpol  vanderpol.f90  vanderpol_parameters.mod
data/Vanderpol_Section_4_2/FATODE/FATODE_1.2/: README
data/Vanderpol_Section_4_2/FATODE/FATODE_1.2/ADJ/ERK_ADJ/: erk_adj_f90_integrator.mod
data/Vanderpol_Section_4_2/FATODE/Vanderpol/: Makefile  utility.mod  vanderpol  vanderpol.F90  vanderpol_parameters.mod
data/Vanderpol_Section_4_2/PETSc/: CMakeLists.txt  run_all_tols.sh
data/Vanderpol_Section_4_2/PETSc/src/: vanderpol.c
data/Vanderpol_Section_4_2/VectorizedAdjoint/: CMakeLists.txt  main.cpp  output.csv  run_vanderpol.sh
data/Vanderpol_Section_4_2/VectorizedAdjoint/data/: data_vanderpol_CK54.csv
doc/: general.rst  vanderpol.rst
doc/source/: conf.py  generalizedLotkaVolterra.rst  harmonicOscillator.rst  index.rst
examples/GeneralizedLotkaVolterra/: CMakeLists.txt  main.cpp
examples/GeneralizedLotkaVolterra/data/N10/: alphasfile_cpp.csv
examples/GeneralizedLotkaVolterra/data/N5/: alphasfile_cpp.csv
examples/GeneralizedLotkaVolterra/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lotka
examples/HarmonicOscillator/: CMakeLists.txt  main.cpp
examples/HarmonicOscillator/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  harmonic
examples/VanDerPol/: CMakeCache.txt  CMakeLists.txt  main.cpp
examples/VanDerPol/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  vanderpol
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: AadData.hpp  AadDataNew.hpp  ButcherTable.hpp  Driver.hpp  OdeDriverNew.hpp  StateStorage.hpp  SystemFunctor.hpp  ThreadPool.hpp  aadcintegrate.hpp  backpropagation.hpp  casa.hpp  cse.hpp  divided_differences.hpp  lib.hpp  runge_kutta.hpp  time.hpp  utilities.hpp
lib/include/detail/: backpropagation.hpp  runge_kutta.hpp
test/: backpropagation.hpp  backpropagation_detail.hpp
